--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -160,6 +160,7 @@
 	{% block midnav %}{% endblock %}
 	{% block mainlink %}{% endblock %}
 	{% block bodylink %}{% endblock %}
+	{% block tools %}{% endblock %}
 	{% block jsb %}{% endblock %}
 </div>
 </body>
