--- a/pro/templates/default.html
+++ b/pro/templates/default.html
@@ -94,7 +94,7 @@
 </div>
 {% endblock %}
 {% block mainlink %}
-<div class="container">
+<div class="container" style="padding:0px;">
 	<div class="row total-eigth">
 		<div class="col-md-1 eigth-div">
 			<div><a href="https://www.baidu.com/"><img class="img-rounded eigth-img" src="/static/img/581.jpg" alt="通用的占位符缩略图"></a></div>
@@ -861,6 +861,10 @@
 						 <td><a href="https://www.baidu.com">真人照片</a></td>
 						 <td><a href="https://www.baidu.com">美女表演</a></td>
 					 </tr>
+					 <tr>
+						 <td><a href="https://www.baidu.com">真人照片</a></td>
+						 <td><a href="https://www.baidu.com">美女表演</a></td>
+					 </tr>
 					 </tbody>
 				 </table>
 			 </div>
@@ -1145,6 +1149,12 @@
 						 <td><a href="https://www.baidu.com">保安</a></td>
 						 <td><a href="https://www.baidu.com">洗碗工</a></td>
 						 <td><a href="https://www.baidu.com">平面设计</a></td>
+					 </tr>
+					 <tr>
+						 <td><a href="https://www.baidu.com">会计</a></td>
+						 <td><a href="https://www.baidu.com">电工</a></td>
+						 <td><a href="https://www.baidu.com">迎宾</a></td>
+						 <td><a href="https://www.baidu.com">仓库管理</a></td>
 					 </tr>
 					 <tr>
 						 <td><a href="https://www.baidu.com">会计</a></td>
@@ -1591,40 +1601,27 @@
 							 <a href="https://www.baidu.com">/乐活</a>
 						 </td>
 					 </tr>
-					 </tbody>
-				 </table>
-			 </div>
-			 <div>
-				 <table class="table table-hover table-responsive">
-					 <caption>
-						 <ul class="list-inline">
-							 <a class="cont-main-text" href="https://www.baidu.com">旧物回收</a>
-							 <a class="cont-sed-text" href="https://www.baidu.com">奢侈品回收</a>
-							 <a class="cont-sed-text" href="https://www.baidu.com">废纸回收</a>
-							 <a class="cont-sed-text" href="https://www.baidu.com">数码回收</a>
-							 <a class="cont-sed-text" href="https://www.baidu.com">手机估价</a>
-						 </ul>
-					 </caption>
-					 <tbody>
 					 <tr>
-						 <td><a href="https://www.baidu.com">热门回收</a></td>
-						 <td><a href="https://www.baidu.com">设备</a></td>
-						 <td><a href="https://www.baidu.com">手机</a></td>
-						 <td><a href="https://www.baidu.com">电脑</a></td>
-						 <td><a href="https://www.baidu.com">礼品</a></td>
+						 <td colspan="9">
+							 <a href="https://www.baidu.com">生活家</a>
+							 <a href="https://www.baidu.com">/租房</a>
+							 <a href="https://www.baidu.com">/搬家</a>
+							 <a href="https://www.baidu.com">/职场</a>
+							 <a href="https://www.baidu.com">/装修</a>
+							 <a href="https://www.baidu.com">/风水</a>
+							 <a href="https://www.baidu.com">/乐活</a>
+						 </td>
 					 </tr>
 					 <tr>
-						 <td><a href="https://www.baidu.com">生活回收</a></td>
-						 <td><a href="https://www.baidu.com">家具</a></td>
-						 <td><a href="https://www.baidu.com">电器</a></td>
-						 <td><a href="https://www.baidu.com">电池</a></td>
-					 </tr>
-					 <tr>
-						 <td><a href="https://www.baidu.com">商业回收</a></td>
-						 <td><a href="https://www.baidu.com">办公</a></td>
-						 <td><a href="https://www.baidu.com">文体</a></td>
-						 <td><a href="https://www.baidu.com">库存</a></td>
-						 <td><a href="https://www.baidu.com">更多>></a></td>
+						 <td colspan="9">
+							 <a href="https://www.baidu.com">生活家</a>
+							 <a href="https://www.baidu.com">/租房</a>
+							 <a href="https://www.baidu.com">/搬家</a>
+							 <a href="https://www.baidu.com">/职场</a>
+							 <a href="https://www.baidu.com">/装修</a>
+							 <a href="https://www.baidu.com">/风水</a>
+							 <a href="https://www.baidu.com">/乐活</a>
+						 </td>
 					 </tr>
 					 </tbody>
 				 </table>
@@ -1753,10 +1750,112 @@
 		</div>
 	</div>
  </div>
-
- <br/><br/>
-
- {% endblock%}
+{% endblock%}
+{% block contracts %}
+<div class="container">
+	<div class="row">
+		<div class="body-div-contracts">
+			<dl>
+				<dd>
+					<a href="#"><img class="search-width" src="/static/img/logo-o.png" alt="通用的占位符缩略图"></a>
+				</dd>
+			</dl>
+		 </div>
+		<div class="body-div-contracts">
+			<dl>
+				<dd class="contracts-head-text"><a href="https://www.baidu.com">合作伙伴</a></dd>
+				<dd><a href="https://www.baidu.com">安居客</a></dd>
+				<dd><a href="https://www.baidu.com">驾校一点通</a></dd>
+				<dd><a href="https://www.baidu.com">中华英才网</a></dd>
+				<dd><a href="https://www.baidu.com">58车</a></dd>
+			</dl>
+		 </div>
+		<div class="body-div-contracts">
+			<dl>
+				<dd class="contracts-head-text"><a href="https://www.baidu.com">帮助中心</a></dd>
+				<dd><a href="https://www.baidu.com">常见问题</a></dd>
+				<dd><a href="https://www.baidu.com">更多帮助</a></dd>
+				<dd><a href="https://www.baidu.com">常见反馈</a></dd>
+			</dl>
+		 </div>
+		<div class="body-div-contracts">
+			<dl>
+				<dd class="contracts-head-text"><a href="https://www.baidu.com">关注我们</a></dd>
+				<dd><a href="https://www.baidu.com">新浪微博</a></dd>
+				<dd><a href="https://www.baidu.com">官方微店</a></dd>
+			</dl>
+		 </div>
+		<div class="body-div-contracts">
+			<dl>
+				<dd class="contracts-head-text"><a href="https://www.baidu.com">关于58同城</a></dd>
+				<dd><a href="https://www.baidu.com">了解58同城</a></dd>
+				<dd><a href="https://www.baidu.com">加入58同城</a></dd>
+			</dl>
+		 </div>
+		<div class="body-div-contracts">
+			<dl>
+				<dd class="contracts-head-text"><a href="https://www.baidu.com">服务支持</a></dd>
+				<dd><a href="https://www.baidu.com">推广服务</a></dd>
+				<dd><a href="https://www.baidu.com">渠道招聘</a></dd>
+				<dd><a href="https://www.baidu.com">先行赔付</a></dd>
+				<dd><a href="https://www.baidu.com">举报平台</a></dd>
+			</dl>
+		 </div>
+	</div>
+</div>
+<hr/>
+{% endblock%}
+{%block endlink %}
+<div class="container">
+<ul class="list-inline">
+	<a  href="">友情链接</a>
+	<a  href="https://www.baidu.com">居泰隆实体家居</a>
+	<a  href="https://www.baidu.com">中国黄页网</a>
+	<a  href="https://www.baidu.com">易坦网</a>
+	<a  href="https://www.baidu.com">杭州汽车网</a>
+	<a  href="https://www.baidu.com">清华大学研修班</a>
+	<a  href="https://www.baidu.com">杭州地图</a>
+	<a  href="https://www.baidu.com">幼儿教育</a>
+	<a  href="https://www.baidu.com">杭州装修网</a>
+	<a  href="https://www.baidu.com">杭州房产网</a>
+	<a  href="https://www.baidu.com">梦婚礼</a>
+	<a  href="https://www.baidu.com">更多...</a>
+</ul>
+<ul class="list-inline">
+	<a  href="">京公网备案信息110105000809</a>
+	<a  href="">京ICP证060405</a>
+	<a  href="">京ICP备10012705号-2</a>
+	<a  href="">乙测资字11018014</a>
+	<a  href="">Investor Relations</a>
+	<a  href="">违法信息举报：4008135858</a>
+	<a  href="">反欺诈联盟</a>
+	<a  href="">员工舞弊举报：wb@58.com</a>
+</ul>
+<div class="container">
+	<div class="row">
+		<div class="body-div-contracts-end">
+			<a href="http://www.baidu.com">58反欺诈联盟</a>
+		 </div>
+		<div class="body-div-contracts-end">
+			<a href="http://www.baidu.com">网上有害信息举报专区</a>
+		 </div>
+		<div class="body-div-contracts-end">
+			<a href="http://www.baidu.com">网络举报APP下载</a>
+		 </div>
+		<div class="body-div-contracts-end">
+			<a href="http://www.baidu.com">诚信网站</a>
+		 </div>
+		<div class="body-div-contracts-end">
+			<a href="http://www.baidu.com">企业信用信息</a>
+		 </div>
+		<div class="body-div-contracts-end">
+			<a href="http://www.baidu.com">防网络诈骗</a>
+		 </div>
+	</div>
+</div>
+<br/>
+</div>
+{%endblock%}
 {% block jsb %}
 <script>
 $(function() {$(".dropdown-toggle").dropdown('toggle');});
