--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -20,7 +20,7 @@
 </head>
 <body class="all-all">
 <div class="container div-all">
-	<nav class="navbar navbar-default" style="margin:0" role="navigation">
+	<nav class="navbar navbar-default" style="margin:0px;" role="navigation">
 		<div class="container-fluid"> 
 			<div class="navbar-header">
 				<a class="navbar-brand" href="#">北京[切换城市]</a>
@@ -161,6 +161,8 @@
 	{% block mainlink %}{% endblock %}
 	{% block bodylink %}{% endblock %}
 	{% block tools %}{% endblock %}
+	{% block contracts %}{% endblock %}
+	{% block endlink %}{% endblock %}
 	{% block jsb %}{% endblock %}
 </div>
 </body>
