加个全国地址节点信息和优化数据库表

--- a/pro/templates/default.html
+++ b/pro/templates/default.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="col-md-6">
 			<div class="row">
-				<div class="col-md-10">
+				<div class="col-md-10 close-to">
 					<label><input type="text" placeholder="Name"></label>
 					<label>
 						<span>充话费</span>
@@ -28,7 +28,7 @@
 						<span>同城租车</span>
 					</label>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 close-to">
 					<lable><button type="button" class="button">搜索</button></label>
 				</div>
 			</div>
