--- a/pro/templates/search.html
+++ b/pro/templates/search.html
@@ -15,20 +15,20 @@
 		</div>
 		<div class="col-md-6">
 			<div class="row">
-				<div class="col-md-10">
+				<div class="col-md-10 close-to">
 					<label><input type="text" placeholder="Name"></label>
 					<label>
-						<span>充话费</span>
-						<span>租房</span>
-						<span>合租</span>
-						<span>电瓶车</span>
-						<span>销售急聘</span>
-						<span>洗车故障</span>
-						<span>装修公司</span>
-						<span>同城租车</span>
+						<span><a href="https://www.baidu.com">充话费</a></span>
+						<span><a href="https://www.baidu.com">租房</a></span>
+						<span><a href="https://www.baidu.com">合租</a></span>
+						<span><a href="https://www.baidu.com">电瓶车</a></span>
+						<span><a href="https://www.baidu.com">销售急聘</a></span>
+						<span><a href="https://www.baidu.com">洗车故障</a></span>
+						<span><a href="https://www.baidu.com">装修公司</a></span>
+						<span><a href="https://www.baidu.com">同城租车</a></span>
 					</label>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 close-to">
 					<lable><button type="button" class="button">搜索</button></label>
 				</div>
 			</div>
