优化修改数据库文件

--- a/pro/templates/default.html
+++ b/pro/templates/default.html
@@ -243,7 +243,7 @@
 <div class="container body-all-div">
 	<div class="row">
 		<div class="body-frist-div" style="width:22%;">
-			<div>
+			<div class="table-div-every">
 				<table class="table table-hover table-responsive">
 					<caption>
 						<ul class="list-inline">
@@ -292,7 +292,7 @@
 					</tbody>
 				</table>
 			</div>
-			<div>
+			<div class="table-div-every">
 				<table class="table table-hover table-responsive">
 					<caption>
 						<ul class="list-inline">
@@ -325,7 +325,7 @@
 					</tbody>
 				</table>
 			</div>
-			<div>
+			<div class="table-div-every">
 				<table class="table table-hover table-responsive">
 					<caption>
 						<ul class="list-inline">
@@ -364,7 +364,7 @@
 					</tbody>
 				</table>
 			</div>
-			<div>
+			<div class="table-div-every">
 				<table class="table table-hover table-responsive">
 					<caption>
 						<ul class="list-inline">
@@ -398,7 +398,7 @@
 					</tbody>
 				</table>
 			</div>
-			<div>
+			<div class="table-div-every">
 				<table class="table table-hover table-responsive">
 					<caption>
 						<ul class="list-inline">
@@ -458,7 +458,7 @@
 					</tbody>
 				</table>
 			</div>
-			<div>
+			<div class="table-div-every">
 				<table class="table table-hover table-responsive">
 					<caption>
 						<ul class="list-inline">
@@ -540,7 +540,7 @@
 					</tbody>
 				</table>
 			</div>
-			<div>
+			<div class="table-div-every">
 				<table class="table table-hover table-responsive">
 					<caption>
 						<ul class="list-inline">
@@ -561,7 +561,7 @@
 			</div>
 		 </div>
 		 <div class="body-frist-div" style="width:22%;">
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -728,7 +728,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -790,7 +790,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -838,7 +838,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -871,7 +871,7 @@
 			 </div>
 		 </div>
 		 <div class="body-frist-div" style="width:28%;">
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -911,9 +911,9 @@
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
-							 <a class="cont-fourth-text" href="https://www.baidu.com">杭州房产</a>&nbsp;&nbsp;&nbsp;
-							 <a class="cont-fourth-text" href="https://www.baidu.com">杭州房产</a>&nbsp;&nbsp;&nbsp;
-							 <a class="cont-fourth-text" href="https://www.baidu.com">杭州房产</a>&nbsp;&nbsp;&nbsp;
+							 <a class="cont-fourth-text" href="https://www.baidu.com">热招岗位</a>&nbsp;&nbsp;&nbsp;
+							 <a class="cont-fourth-text" href="https://www.baidu.com">家政好工作，报名速上岗</a>&nbsp;&nbsp;&nbsp;
+							 <a class="cont-fourth-text" href="https://www.baidu.com">非你莫属报名</a>&nbsp;&nbsp;&nbsp;
 						 </ul>
 					 </caption>
 					 <tbody>
@@ -998,7 +998,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1048,7 +1048,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1118,7 +1118,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1168,7 +1168,7 @@
 			 </div>
 		 </div>
 		 <div class="body-frist-div" style="width:28%;">
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1237,7 +1237,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1276,7 +1276,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1312,7 +1312,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1390,7 +1390,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1427,7 +1427,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1466,7 +1466,7 @@
 					 </tbody>
 				 </table>
 			 </div>
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1509,7 +1509,7 @@
 				 </table>
 			 </div>
 
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
@@ -1548,7 +1548,7 @@
 				 </table>
 			 </div>
 
-			 <div>
+			<div class="table-div-every">
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
