完成中文测试，优化地名切换显示

--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -17,7 +17,7 @@
 	<nav class="navbar navbar-default" style="margin:0px;" role="navigation">
 		<div class="container-fluid"> 
 			<div class="navbar-header">
-				<a class="navbar-brand" href="/selectaddr">{{ session['node_name']}}[切换城市]</a>
+				<span>{{ session['node_name']}}<a class="navbar-brand" href="/selectaddr">[切换城市]</a><span>
 			</div>
 			<div>
 				<p class="navbar-text navbar-left">招聘</p>
