优化城市与切换

--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -17,7 +17,7 @@
 	<nav class="navbar navbar-default" style="margin:0px;" role="navigation">
 		<div class="container-fluid"> 
 			<div class="navbar-header">
-				<p class="navbar-text navbar-left">{{ session['node_name']}}<a class=""  target="_blank" href="/selectaddr">[切换城市]</a></p>
+				<p class="navbar-text navbar-left">{{ session['node_name']}}<a class="" href="/selectaddr">[切换城市]</a></p>
 			</div>
 			<div>
 				<p class="navbar-text navbar-left">招聘</p>
